# bluemetal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Notes  README.md  build.nix  build.sh  flake.nix  imgui.ini  msys.bat  run.sh  shell.nix  vcpkg.json  yummers.conf
Engine/Config/: CMakeLists.txt
Engine/Config/Source/: Config.cpp  ConfigLexer.cpp  ConfigParser.cpp  ConfigToken.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Source/: Debug.cpp  Delegate.cpp
Engine/Engine/: CMakeLists.txt
Engine/Engine/Include/: Engine.hpp
Engine/Engine/Source/: Engine.cpp
Engine/ImGui/: CMakeLists.txt  imgui_impl_bloodlust.cpp
Engine/ImGui/Include/: ImGui.hpp  imgui_impl_bloodlust.h
Engine/ImGui/Source/: imgui_impl_bloodlust.cpp
Engine/Input/: CMakeLists.txt
Engine/Input/Source/: InputController.cpp  InputSystem.cpp
Engine/Render/: CMakeLists.txt
Engine/Render/Source/: Buffer.cpp  FrameCounter.cpp  Image.cpp  Pipeline.cpp  RenderDevice.cpp  Renderer.cpp  Shader.cpp  Swapchain.cpp
Engine/Window/: CMakeLists.txt
Engine/Window/Source/: Display.cpp  GLFW.cpp  Screen.cpp  VideoMode.cpp  Window.cpp
Game/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt
Source/AssetProcessor/: CMakeLists.txt  Main.cpp
Source/Engine/: CMakeLists.txt  Export.h  Precompiled.h  System.h  Version.h
Source/Engine/Asset/: Asset.hpp  AssetManager.hpp  AssetType.hpp
Source/Engine/Audio/: AudioChannel.h  AudioChannelGroup.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  FMOD.h  Listener.cpp  Listener.h  Sound.cpp  Sound.h  Source.cpp  Source.h
Source/Engine/Components/: Component.h  MeshInstanceComponent.h  MeshRenderComponent.h  TransformComponent.h
Source/Engine/Config/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt  CTTI.h  CallbackList.hpp  Config.h  Creatable.h  Event.h  FileByte.h  Flags.h  FrameCounter.cpp  FrameCounter.h  Hash.h  Heirarchy.hpp  Json.h  Language.h  Log.h  MacroUtils.h  Memory.h  MulticastDelegate.hpp  Node.h  NonCopyable.h  NonMoveable.h  PathUtils.h  Platform.h  Print.cpp  Print.h  Property.h  ReferenceCounted.h  Result.h  Serialize.h  Singleton.h  TemplateUtils.h  TemplateUtils.hpp  Time.h  Version.h  default.nwdl
Source/Engine/Engine/: AudioSubsystem.cpp  AudioSubsystem.h  CMakeLists.txt  ComponentList.h  ComponentManager.h  Engine.cpp  Engine.h  Engine.hpp  EngineSystem.cpp  EngineSystem.h  Entity.h  GraphicsSubsystem.cpp  GraphicsSubsystem.h  ImGuiSubsystem.cpp  ImGuiSubsystem.h  SDLInitializer.cpp  SDLInitializer.h  SDLSubsystem.cpp  SDLSubsystem.h  Subsystem.h  System.h
Source/Engine/Graphics/: BlockMeta.cpp  BlockMeta.h  BlockReflection.cpp  BlockReflection.h  Buffer.cpp  Buffer.h  Config.h  Conversions.h  DeletionQueue.h  Describable.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  DescriptorReflection.cpp  DescriptorReflection.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  DescriptorSetCache.cpp  DescriptorSetCache.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  DescriptorSetMeta.cpp  DescriptorSetMeta.h  DescriptorSetReflection.cpp  DescriptorSetReflection.h  Device.cpp  Device.h  Display.cpp  Display.h  FrameCounter.cpp  FrameCounter.h  GeometryPass.cpp  GeometryPass.h  GraphicsLimits.h  GraphicsSubsystem.cpp  (+123 more)
Source/Engine/ImGui/: CMakeLists.txt  ImGui.cpp  ImGui.hpp  ImGuiSystem.cpp  ImGuiSystem.h  imconfig.h  imgui.h  imgui_impl_vulkan.cpp
Source/Engine/Input/: CMakeLists.txt  InputAction.h  InputConversions.hpp  InputEvents.hpp  InputSystem.cpp  InputSystem.hpp
Source/Engine/Material/: CMakeLists.txt  Material.h  Material.hpp  UniformData.h
Source/Engine/Math/: CMakeLists.txt  Extent.h  Math.h  Matrix4.h  Rect.h  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Engine/Noodle/: CMakeLists.txt  INFO.md  Noodle.cpp  Noodle.h  Noodle.inl  NoodleExceptions.h  NoodleLexer.cpp  NoodleLexer.h  NoodleToken.cpp  NoodleToken.h
Source/Engine/Platform/: Platform.h
Source/Engine/RHI/: InstanceRHI.h  PhysicalDeviceRHI.h
Source/Engine/Render/: Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  CommandBuffer.hpp  Conversions.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  DescriptorManager.hpp  Device.cpp  Device.h  Format.h  FormatConversions.h  FormatConversions.hpp  FrameCounter.cpp  FrameCounter.h  FrameCounter.hpp  Image.cpp  Image.h  Image.hpp  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  Mesh.hpp  Mesh.inl  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Pipeline.hpp  PipelineLayoutCache.cpp  PipelineLayoutCache.h  PipelineResource.h  Precompiled.hpp  PresentRenderPass.cpp  PresentRenderPass.h  RenderDevice.cpp  (+14 more)
Source/Engine/Resource/: Asset.h  Asset.hpp  AssetManager.h  AssetManager.hpp  ModelGLTF.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
Source/Engine/Voxel/: Chunk.h  Generator.h  Mesher.h  VercidiumMesher.h  Voxel.h  VoxelLimits.h  VoxelWorld.h
Source/Engine/Window/: CMakeLists.txt  Display.cpp  Display.h  Display.hpp  Event.h  Gamepad.h  Keyboard.h  Mouse.h  VideoMode.h  VideoMode.hpp  Window.cpp  Window.h  Window.hpp  WindowPlatform.cpp  WindowPlatform.h  WindowPlatformGLFW.cpp  WindowPlatformGLFW.h  WindowPlatformSDL.h
Source/Engine/World/: Actor.h  Component.h  ComponentList.h  ComponentManager.h  Entity.h  GameObject.h  Node.h  Object3D.h  Registry.h  RenderActor.cpp  RenderActor.h  Scene.h  StaticMeshActor.h  System.h
Source/Engine/imgui/: ImGuiSystem.cpp  ImGuiSystem.h  imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_bluemetal.cpp  imgui_impl_bluemetal.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp  (+1 more)
Source/Game/: CMakeLists.txt  Main.cpp
Source/Programs/: CMakeLists.txt
Source/Resource/: Resource.h  ResourceManager.h
lib/: CMakeLists.txt
(+283 files in other folders)
